--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^10.0.0",
     "@types/d3-interpolate": "^1.3.0",
     "@types/d3-scale": "^2.0.2",
+    "d3-array": "^2.0.2",
     "d3-interpolate": "^1.3.2",
     "d3-scale": "^2.1.2",
     "gymnast": "^16.0.1",
@@ -21,6 +22,7 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/d3-array": "^1.2.4",
     "@types/jest": "^23.3.10",
     "@types/node": "^10.12.10",
     "@types/react": "^16.7.8",
