--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "d3-interpolate": "^1.3.2",
     "d3-scale": "^2.1.2",
     "gymnast": "^16.0.1",
+    "install": "^0.12.2",
+    "intersection-observer": "^0.5.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts-ts": "3.1.0"
+    "react-scripts-ts": "3.1.0",
+    "scrollama": "^1.4.4"
   },
   "scripts": {
     "start": "react-scripts-ts start",
