--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@emotion/core": "^10.0.0",
     "@emotion/styled": "^10.0.0",
+    "@types/d3-fetch": "^1.1.3",
     "@types/d3-interpolate": "^1.3.0",
     "@types/d3-scale": "^2.0.2",
     "d3-array": "^2.0.2",
+    "d3-fetch": "^1.1.2",
     "d3-interpolate": "^1.3.2",
     "d3-scale": "^2.1.2",
     "gymnast": "^16.0.1",
