--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/d3-fetch": "^1.1.3",
     "@types/d3-interpolate": "^1.3.0",
     "@types/d3-scale": "^2.0.2",
+    "@types/react-addons-css-transition-group": "^15.0.5",
     "d3-array": "^2.0.2",
     "d3-fetch": "^1.1.2",
     "d3-interpolate": "^1.3.2",
@@ -16,6 +17,7 @@
     "install": "^0.12.2",
     "intersection-observer": "^0.5.1",
     "react": "^16.6.3",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.6.3",
     "react-hook-intersection-observer": "^0.1.0",
     "react-intersection-observer": "^6.3.1",
