--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "@types/d3-fetch": "^1.1.3",
     "@types/d3-interpolate": "^1.3.0",
     "@types/d3-scale": "^2.0.2",
+    "@types/d3-selection": "^1.3.4",
+    "@types/d3-transition": "^1.1.3",
     "@types/react-addons-css-transition-group": "^15.0.5",
     "d3-array": "^2.0.2",
     "d3-fetch": "^1.1.2",
     "d3-interpolate": "^1.3.2",
     "d3-scale": "^2.1.2",
+    "d3-selection": "^1.3.2",
+    "d3-transition": "^1.1.3",
     "gymnast": "^16.0.1",
     "install": "^0.12.2",
     "intersection-observer": "^0.5.1",
