Init intersection observer
Update react to work with IO, tweak the code to work. Not efficiently, though!

--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "gymnast": "^16.0.1",
     "install": "^0.12.2",
     "intersection-observer": "^0.5.1",
-    "react": "^16.6.3",
+    "react": "^16.7.0-alpha.2",
     "react-addons-css-transition-group": "^15.6.2",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.7.0-alpha.2",
     "react-hook-intersection-observer": "^0.1.0",
     "react-intersection-observer": "^6.3.1",
     "react-scripts-ts": "3.1.0",
