--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "react-dom": "^16.8.4",
     "react-hook-intersection-observer": "^0.1.0",
     "react-intersection-observer": "^6.3.1",
-    "react-scripts-ts": "3.1.0",
+    "react-scripts": "^2.1.8",
     "scrollama": "^1.4.4"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "@types/d3-array": "^1.2.4",
@@ -41,5 +41,11 @@
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
     "typescript": "^3.1.6"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
