--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^10.12.10",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
+    "prettier": "^1.16.4",
     "typescript": "^3.1.6"
   },
   "browserslist": [
