Rm unused scrollama

--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react-dom": "^16.8.4",
     "react-hook-intersection-observer": "^0.1.0",
     "react-intersection-observer": "^8.22.3",
-    "react-scripts": "^2.1.8",
-    "scrollama": "^1.4.4"
+    "react-scripts": "^2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
